--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -101,6 +101,18 @@
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
                 
+        <!-- Mod version -->
+        <Preference android:key="mod_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/mod_version"
+                android:summary="@string/mod_version_default" />
+
+        <!-- Mod build date -->
+        <Preference android:key="mod_build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/mod_build_date"
+                android:summary="@string/mod_build_date_default" />
+
         <!-- Device Baseband version -->
         <Preference android:key="baseband_version" 
                 style="?android:preferenceInformationStyle"
@@ -112,13 +124,6 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
-
-        <!-- Mod version -->
-        <Preference android:key="mod_version"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/mod_version"
-                android:summary="@string/mod_version_default" />
-
 
         <!-- Detailed build version -->
         <Preference android:key="build_number" 
