--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -914,7 +914,7 @@
         <item>1</item>
         <item>0</item>
     </string-array>
-    
+
     <string-array name="entries_heapsize">
         <item>12m</item>
         <item>16m</item>
@@ -930,7 +930,45 @@
         <item>32m</item>
         <item>48m</item>
     </string-array>
-    
+
+    <string-array name="entries_ksm_sleep">
+        <item>500 ms</item>
+        <item>1000 ms</item>
+        <item>1500 ms</item>
+        <item>2000 ms</item>
+        <item>2500 ms</item>
+        <item>3000 ms</item>
+        <item>3500 ms</item>
+        <item>4000 ms</item>
+    </string-array>
+
+    <string-array name="values_ksm_sleep" translatable="false">
+        <item>500</item>
+        <item>1000</item>
+        <item>1500</item>
+        <item>2000</item>
+        <item>2500</item>
+        <item>3000</item>
+        <item>3500</item>
+        <item>4000</item>
+    </string-array>
+
+        <string-array name="entries_ksm_pages">
+        <item>64</item>
+        <item>128</item>
+        <item>256</item>
+        <item>384</item>
+        <item>512</item>
+    </string-array>
+
+    <string-array name="values_ksm_pages" translatable="false">
+        <item>64</item>
+        <item>128</item>
+        <item>256</item>
+        <item>384</item>
+        <item>512</item>
+    </string-array>
+
     <string-array name="pref_zram_size_entries">
         <item>Disabled</item>
         <item>10%</item>
