--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -702,14 +702,6 @@
         <item>Unsuccessful</item>
     </string-array>
 
-    <string-array name="location_entries_gps_source">
-        <item>Use Internal GPS</item>
-    </string-array>
-    
-    <string-array name="location_values_gps_source" translatable="false">
-        <item>0</item>
-    </string-array>  
-    
     <!-- **** CYANOGENMOD EDITS START **** -->
     <!-- Arrays required by Automatic Backlight. -->
     <string-array name="entries_light_filter_window">
@@ -915,6 +907,20 @@
         <item>0</item>
     </string-array>
 
+    <string-array name="entries_scrollingcache" translatable="false">
+        <item>@string/pref_scrollingcache_force_enable</item>
+        <item>@string/pref_scrollingcache_default_enable</item>
+        <item>@string/pref_scrollingcache_default_disable</item>
+        <item>@string/pref_scrollingcache_force_disable</item>
+    </string-array>
+
+    <string-array name="values_scrollingcache" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <string-array name="entries_heapsize">
         <item>12m</item>
         <item>16m</item>
@@ -1048,4 +1054,11 @@
      
     <!-- **** CYANOGENMOD EDITS END **** -->    
 
+    <string-array name="location_entries_gps_source">
+        <item>Use Internal GPS</item>
+    </string-array>
+
+    <string-array name="location_values_gps_source" translatable="false">
+        <item>0</item>
+    </string-array>
 </resources>
