Add wakeup options category to display settings

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -56,4 +56,14 @@
             android:title="@string/navigation_bar_title"
             android:summary="@string/navigation_bar_summary" />
 
+        <PreferenceCategory
+            android:key="category_wakeup_options"
+            android:title="@string/display_category_wakeup_options_title"/>
+
+        <CheckBoxPreference
+            android:key="pref_volume_wake"
+            android:title="@string/pref_volume_wake_title"
+            android:summary="@string/pref_volume_wake_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
