Settings: 180 degree rotation option
Another AOKP setting that has been extracted from the "custom" settings
activity and integrated into the regular settings application. This
option allows the screen to rotate to match an inverted device. This
option is not practical, but fits into the ability to enable full 360
degree rotation.

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -36,6 +36,11 @@
         <CheckBoxPreference
             android:key="accelerometer"
             android:title="@string/accelerometer_title"/>
+    
+        <CheckBoxPreference
+            android:key="rotate_180"
+            android:title="@string/rotate_180_title"
+            android:summary="@string/rotate_180_summary" />
 
         <ListPreference
             android:key="screen_timeout"
