--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -41,6 +41,10 @@
     <PreferenceCategory
         android:title="@string/status_bar_general_title">
 
+        <Preference
+            android:key="carrier_text"
+            android:title="@string/carrier_text" />
+        
         <ListPreference
             android:key="status_bar_battery"
             android:dialogTitle="@string/status_bar_battery_title"
