--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -74,6 +74,11 @@
             android:title="@string/display_electron_beam_animation_off_title"
             android:defaultValue="true" />
 
+        <CheckBoxPreference
+            android:key="battery_pulse"
+            android:title="@string/battery_pulse_title"
+            android:persistent="false" />
+
         <PreferenceCategory
             android:key="category_wakeup_options"
             android:title="@string/display_category_wakeup_options_title"/>
