--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -21,8 +21,13 @@
 
     <PreferenceScreen
         android:key="notification_drawer"
-        android:fragment="com.android.settings.cyanogenmod.PowerWidget"
+        android:fragment="com.android.settings.cyanogenmod.NotificationDrawer"
         android:title="@string/notification_drawer_title" />
+
+    <PreferenceScreen
+        android:key="power_widget"
+        android:fragment="com.android.settings.cyanogenmod.PowerWidget"
+        android:title="@string/power_widget_title" />
 
     <PreferenceScreen
         android:key="status_bar"
