--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1026,6 +1026,38 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <string-array name="pref_lockscreen_options_values">
+		<item>2</item>
+		<item>6</item>
+        <item>8</item>
+	</string-array>
+    
+    <string-array name="pref_lockscreen_options_entries">
+		<item>Stock</item>
+		<item>Quad</item>
+        <item>Octo</item>
+	</string-array>
+
+    <string-array name="lockscreen_choice_entries">
+		<item>Unlock</item>
+		<item>Sound toggle</item>
+		<item>Phone</item>
+		<item>Camera</item>
+        <item>SMS</item>
+		<item>Custom app</item>
+		<item>Blank</item>
+	</string-array>
+    
+	<string-array name="lockscreen_choice_values">
+		<item>**unlock**</item>
+		<item>**sound**</item>
+		<item>**phone**</item>
+		<item>**camera**</item>
+        <item>**mms**</item>
+		<item>**app**</item>
+		<item>**null**</item>
+	</string-array>
     
     <string-array name="lockscreen_delay_entries">
         <item>Immediately</item>
