Revert "Profiles - Part 1 of 2"
This reverts commit 0291fb5e17f4e4ce87ab17336f87e86880d130c4.

--- a/res/xml/application_list.xml
+++ b/res/xml/application_list.xml
@@ -17,9 +17,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <PreferenceCategory
-        android:key="profile_applist_title"
-        android:title="@string/profile_applist_title" >
-    </PreferenceCategory>
+    <PreferenceCategory android:key="profile_applist_title"
+            android:title="@string/profile_applist_title" />
 
 </PreferenceScreen>
