--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -191,9 +191,19 @@
         <item name="android:shadowColor">#B0000000</item>
     </style>
 
-    <style name="ProfilesPreferenceStyle">
+    <style name="profile_list_left_column">
+        <item name="android:layout_width">68dip</item>
+        <item name="android:layout_height">68dip</item>
+    </style>
+
+    <style name="ProfilesPreferenceStyleRadioButton">
         <item name="android:layout">@layout/preference_profiles</item>
-        <item name="android:widgetLayout">@layout/preference_profiles_widget</item>
+        <item name="android:widgetLayout">@layout/preference_profiles_widget_radiobutton</item>
+    </style>
+
+    <style name="ProfilesPreferenceStyleCheckBox">
+        <item name="android:layout">@layout/preference_profiles</item>
+        <item name="android:widgetLayout">@layout/preference_profiles_widget_checkbox</item>
     </style>
 
 </resources>
