--- a/res/xml/profile_config.xml
+++ b/res/xml/profile_config.xml
@@ -23,6 +23,11 @@
         android:title="@string/profile_name_title">
     </PreferenceCategory>
 
+<!--
+    CheckBoxPreference
+        android:key="profile_statusbar"
+        android:title="@string/profile_statusbar"
+-->
     <PreferenceCategory
         android:key="profile_connectionoverrides"
         android:title="@string/profile_connectionoverrides_title" />
