Revert "Profiles - Part 1 of 2 - Settings"
This reverts commit 1fb33dfc78dd8cf3923bfb7df0ed4c1eafca8936.

--- a/res/xml/profiles_settings.xml
+++ b/res/xml/profiles_settings.xml
@@ -14,22 +14,16 @@
      limitations under the License.
 -->
 
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+<!-- This is a placeholder stub for the preference screen -->
 
-    <PreferenceCategory
-        android:title="@string/profile_appgroups_title">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        android:title="@string/profiles_settings_title"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-            <PreferenceScreen
-                android:key="app_groups"
-                android:title="@string/profile_appgroups_manage"
-                android:fragment="com.android.settings.profiles.AppGroupList" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="profiles_list"
-        android:title="@string/profile_profiles_manage" />
+        <!-- Temporary - Preference stub -->
+        <Preference android:key="stubbed"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/stubbed"
+                android:summary="@string/stubbed_summary" />
 
 </PreferenceScreen>
