--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -54,6 +54,11 @@
             android:key="notification_pulse"
             android:title="@string/notification_pulse_title"
             android:persistent="false" />
+
+        <CheckBoxPreference
+            android:key="dual_pane"
+            android:title="@string/dual_pane_title"
+            android:summary="@string/dual_pane_summary" />
     
         <CheckBoxPreference
             android:key="navigation_bar"
