--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -20,6 +20,31 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceScreen
+        android:key="lcd_density"
+        android:fragment="com.android.settings.cyanogenmod.DensityChanger"
+        android:title="@string/lcd_density_wizard" />
+
+    <PreferenceScreen
+        android:key="status_bar"
+        android:fragment="com.android.settings.cyanogenmod.StatusBar"
+        android:title="@string/combined_status_bar_title" />
+
+    <PreferenceScreen
+        android:key="power_widget"
+        android:fragment="com.android.settings.cyanogenmod.PowerWidget"
+        android:title="@string/power_widget_title" />
+    
+    <PreferenceScreen
+        android:key="lock_screen"
+        android:fragment="com.android.settings.cyanogenmod.LockscreenInterface"
+        android:title="@string/lock_screen_title" />
+    
+    <PreferenceScreen
+        android:key="wallpaper"
+        android:title="@string/wallpaper_settings_title"
+        android:fragment="com.android.settings.WallpaperTypeSettings" />
+
+    <PreferenceScreen
         android:key="navigation_bar"
         android:fragment="com.android.settings.cyanogenmod.NavBar"
         android:title="@string/navigation_bar_title" />
@@ -29,25 +54,6 @@
         android:fragment="com.android.settings.cyanogenmod.NotificationDrawer"
         android:title="@string/notification_drawer_title" />
 
-    <PreferenceScreen
-        android:key="power_widget"
-        android:fragment="com.android.settings.cyanogenmod.PowerWidget"
-        android:title="@string/power_widget_title" />
-
-    <PreferenceScreen
-        android:key="status_bar"
-        android:fragment="com.android.settings.cyanogenmod.StatusBar"
-        android:title="@string/combined_status_bar_title" />
-
-    <PreferenceScreen
-        android:key="lock_screen"
-        android:fragment="com.android.settings.cyanogenmod.LockscreenInterface"
-        android:title="@string/lock_screen_title" />
-
-    <PreferenceScreen
-        android:key="wallpaper"
-        android:title="@string/wallpaper_settings_title"
-        android:fragment="com.android.settings.WallpaperTypeSettings" />
 
     <ListPreference
         android:key="font_size"
