--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -56,6 +56,12 @@
             android:title="@string/display_rotation_title" />
 
         <CheckBoxPreference
+            android:key="compatibility_mode"
+            android:title="@string/compatibility_mode_title"
+            android:summaryOn="@string/compatibility_mode_summary_on"
+            android:summaryOff="@string/compatibility_mode_summary_off" />
+
+        <CheckBoxPreference
             android:key="dual_pane"
             android:title="@string/dual_pane_title"
             android:summary="@string/dual_pane_summary" />
