Cleanup lock screen settings and move proximity disabling

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -23,5 +23,10 @@
 		android:title="@string/lockscreen_targets">
         
 	</PreferenceCategory>
+
+    <CheckBoxPreference
+        android:key="proximity_disable"
+        android:title="@string/pref_proximity_disable_title"
+        android:summary="@string/pref_proximity_disable_summary" />
     
 </PreferenceScreen>
