--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -71,6 +71,13 @@
             android:targetClass="com.cyanogenmod.trebuchet.preference.Preferences" />
     </header>
 
+    <!-- System -->
+    <header
+        android:id="@+id/playground_settings"
+        android:icon="@drawable/ic_playground_system"
+        android:fragment="com.android.settings.cyanogenmod.ThePlayground"
+        android:title="@string/playground_panel_title" />
+
     <!-- Themes -->
     <header
         android:id="@+id/themes_settings"
