Move custom settings panel to separate top-level directory
Some days I miss Eclipse for the syntax highlighting.

--- a/res/xml/playground_panel.xml
+++ b/res/xml/playground_panel.xml
@@ -46,12 +46,12 @@
 
         <CheckBoxPreference
             android:key="notification_drawer_carrier_text"
-            android:title="@string/carrier_text"
+            android:title="@string/carrier_text_title"
             android:summary="@string/carrier_text_summary"
             android:defaultValue="false" />
         
         <Preference
             android:key="custom_carrier_text"
-            android:title="@string/carrier_text" />
+            android:title="@string/carrier_text_heading" />
 
 </PreferenceScreen>
