--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -75,7 +75,7 @@
     <header
         android:id="@+id/playground_settings"
         android:icon="@drawable/ic_playground_system"
-        android:fragment="com.android.settings.cyanogenmod.ThePlayground"
+        android:fragment="com.android.settings.playground.PlaygroundPanel"
         android:title="@string/playground_panel_title" />
 
     <!-- Themes -->
