--- a/res/xml/playground_panel.xml
+++ b/res/xml/playground_panel.xml
@@ -39,6 +39,11 @@
             android:title="@string/pref_proximity_disable_title"
             android:summary="@string/pref_proximity_disable_summary" />
 
+        <CheckBoxPreference
+            android:key="boot_sound"
+            android:title="@string/pref_boot_sound_title"
+            android:summary="@string/pref_boot_sound_summary" />
+
         <Preference
             android:key="external_cache"
             android:title="@string/cache_external_title"
