--- a/res/xml/playground_panel.xml
+++ b/res/xml/playground_panel.xml
@@ -50,6 +50,8 @@
             android:title="@string/pref_composition_bypass_title"
             android:summary="@string/pref_composition_bypass_summary" />
 
+        </PreferenceCategory>
+
         <PreferenceCategory
             android:key="system_hacking"
             android:title="@string/system_hacking">
@@ -74,6 +76,8 @@
             android:key="custom_carrier_text"
             android:title="@string/carrier_text_heading" />
 
+        </PreferenceCategory>
+
         <PreferenceCategory
             android:key="hardware_hacking"
             android:title="@string/hardware_hacking">
@@ -82,5 +86,7 @@
             android:key="proximity_disable"
             android:title="@string/pref_proximity_disable_title"
             android:summary="@string/pref_proximity_disable_summary" />
+
+        </PreferenceCategory>
 
 </PreferenceScreen>
