--- a/res/xml/notification_drawer.xml
+++ b/res/xml/notification_drawer.xml
@@ -16,6 +16,13 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/notification_drawer_title">
+    android:title="@string/notification_drawer_title"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    
+    <!-- Temporary - Preference stub -->
+    <Preference android:key="stubbed"
+        style="?android:preferenceInformationStyle"
+        android:title="@string/stubbed"
+        android:summary="@string/stubbed_summary" />
 
 </PreferenceScreen>
