--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -738,6 +738,18 @@
         <item>mdp</item>
     </string-array>
 
+    <string-array name="entries_install_location" translatable="false">
+        <item>@string/pref_automatic_loc</item>
+        <item>@string/pref_internal_loc</item>
+        <item>@string/pref_external_loc</item>
+    </string-array>
+
+    <string-array name="values_install_location" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- **** CYANOGENMOD EDITS START **** -->
     <!-- Arrays required by Automatic Backlight. -->
     <string-array name="entries_light_filter_window">
