--- a/res/xml/playground_panel.xml
+++ b/res/xml/playground_panel.xml
@@ -53,6 +53,24 @@
         </PreferenceCategory>
 
         <PreferenceCategory
+            android:key="application_hacking"
+            android:title="@string/application_hacking">
+
+        <Preference
+            android:key="external_cache"
+            android:title="@string/cache_external_title"
+            android:summary="@string/cache_external_summary" />
+
+        <Preference
+            android:key="install_location"
+            android:title="@string/install_location_title"
+            android:summary="@string/install_location_summary"
+            android:entries="@array/entries_install_location"
+            android:entryValues="@array/values_install_location" />
+
+        </PreferenceCategory>
+
+        <PreferenceCategory
             android:key="system_hacking"
             android:title="@string/system_hacking">
 
@@ -60,11 +78,6 @@
             android:key="boot_sound"
             android:title="@string/pref_boot_sound_title"
             android:summary="@string/pref_boot_sound_summary" />
-
-        <Preference
-            android:key="external_cache"
-            android:title="@string/cache_external_title"
-            android:summary="@string/cache_external_summary" />
 
         <CheckBoxPreference
             android:key="notification_drawer_carrier_text"
