--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -24,10 +24,10 @@
             android:dialogTitle="@string/brightness" />
 
         <PreferenceScreen
-                android:key="backlight_widget"
-                android:fragment="com.android.settings.cyanogenmod.Backlight"
-                android:title="@string/backlight_title"
-                android:summary="@string/backlight_summary" />
+            android:key="backlight_widget"
+            android:fragment="com.android.settings.cyanogenmod.Backlight"
+            android:title="@string/backlight_title"
+            android:summary="@string/backlight_summary" />
 
         <ListPreference
             android:key="screen_timeout"
@@ -37,10 +37,10 @@
             android:entries="@array/screen_timeout_entries"
             android:entryValues="@array/screen_timeout_values" />
 
-        <CheckBoxPreference
+        <PreferenceScreen
             android:key="notification_pulse"
             android:title="@string/notification_pulse_title"
-            android:persistent="false" />
+            android:fragment="com.android.settings.notificationlight.NotificationLightSettings" />
 
         <PreferenceCategory
             android:key="category_layout_options"
