--- a/res/xml/playground_panel.xml
+++ b/res/xml/playground_panel.xml
@@ -81,6 +81,11 @@
             android:title="@string/system_hacking">
 
         <CheckBoxPreference
+            android:key="forced_navi_bar"
+            android:title="@string/pref_navi_bar_title"
+            android:summary="@string/pref_navi_bar_summary" />
+
+        <CheckBoxPreference
             android:key="boot_sound"
             android:title="@string/pref_boot_sound_title"
             android:summary="@string/pref_boot_sound_summary" />
