Integrate website into settings configuration [Test revision]

--- a/res/xml/playground_panel.xml
+++ b/res/xml/playground_panel.xml
@@ -115,4 +115,13 @@
 
         </PreferenceCategory>
 
+        <PreferenceScreen
+            android:key="playground_mainframe"
+            android:title="@string/playground_website"
+            android:summary="@string/playground_website_summary">
+            <intent
+                android:targetPackage="com.android.settings.playground"
+                android:targetClass="com.android.settings.playground.PlaygroundWebsite" />
+        </PreferenceScreen>
+
 </PreferenceScreen>
