--- a/res/xml/playground_panel.xml
+++ b/res/xml/playground_panel.xml
@@ -15,7 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="@string/playground_panel"
+        android:title="@string/playground_panel_title"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
         <PreferenceScreen
