--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-	xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        android:title="@string/themes_settings_title"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <Preference
         android:key="wallpaper"
         android:title="@string/lockscreen_wallpaper_title"
         android:summary="@string/lockscreen_wallpaper_summary" />
-
+    
     <CheckBoxPreference
         android:key="lockscreen_landscape"
         android:title="@string/lockscreen_landscape_title"
         android:summary="@string/lockscreen_landscape_summary" />
 
-	<ListPreference
-        android:entries="@array/pref_lockscreen_options_entries"
-        android:entryValues="@array/pref_lockscreen_options_values"
-        android:key="pref_lockscreen_layout"
-        android:title="Lockscreen Style" />
-    
-	<PreferenceCategory
-		android:key="lockscreen_targets"
-		android:title="@string/lockscreen_targets">
-        
-	</PreferenceCategory>
-    
+    <Preference
+        android:key="lockscreen_targets"
+        android:title="@string/lockscreen_target_title"
+        android:fragment="com.android.settings.cyanogenmod.LockscreenTargets" />
+
 </PreferenceScreen>
