Cleanup for new theme settings implementation

--- a/res/xml/themes_settings.xml
+++ b/res/xml/themes_settings.xml
@@ -21,11 +21,10 @@
     android:title="@string/themes_settings_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <PreferenceScreen
-        android:key="playground_themes"
-        android:fragment="com.android.settings.playground.PlaygroundThemes"
-        android:title="@string/playground_themes" />
-    <PreferenceCategory
-        android:title="@string/cyanogenmod_themes" />
+    <!-- Temporary - Preference stub -->
+    <Preference android:key="stubbed"
+        style="?android:preferenceInformationStyle"
+        android:title="@string/stubbed"
+        android:summary="@string/stubbed_summary" />
 
 </PreferenceScreen>
